--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 //    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
+    implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
+
 
 }
