--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FloorVIew">
         <activity
-            android:name=".StudentMainActivity"
+            android:name=".Registration_Screen"
+            android:exported="false" />
+        <activity
+            android:name=".Login_Registration_Screen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,14 +23,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".StudentMainActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".FloorActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity
+            android:name=".StudentBookChairActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
