--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.floorview">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <application
+        android:hardwareAccelerated="false"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FloorVIew">
-        <activity
-            android:name=".ChangeCredentialsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".CheckReservationsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LibrarianMainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ClassRoomRequestActivity"
-            android:exported="false" />
         <activity
             android:name=".Registration_Screen"
             android:exported="false" />
@@ -43,12 +25,17 @@
         </activity>
         <activity
             android:name=".StudentMainActivity"
-            android:exported="true" />
+            android:exported="true">
+        </activity>
         <activity
-            android:name=".FloorActivity"
-            android:exported="true" />
+            android:name=".FloorActivityTable"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".StudentBookChairActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudentBookClassActivity"
             android:exported="false" />
     </application>
 
