Updated manifest and misc files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,18 @@
         <activity
             android:name=".StudentBookClassActivity"
             android:exported="false" />
+        <activity
+            android:name=".ChangeCredentialsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckReservationsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LibrarianMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ClassRoomRequestActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
