--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,13 +42,13 @@
             android:exported="false" />
         <activity
             android:name=".CheckReservationsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LibrarianMainActivity"
             android:exported="false" />
         <activity
             android:name=".ClassRoomRequestActivity"
-            android:exported="false" />
+            android:exported="true" />
     </application>
 
 </manifest>
