Updated files and classes - Yuval

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".FloorActivityClassroom"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".StudentBookChairActivity"
             android:exported="false" />
         <activity
@@ -48,6 +52,12 @@
             android:exported="false" />
         <activity
             android:name=".ClassRoomRequestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TempClassroomMain"
+            android:exported="true" />
+        <activity
+            android:name=".LibrarianBookClassActivity"
             android:exported="false" />
     </application>
 
